--- a/shared/main.css
+++ b/shared/main.css
@@ -907,11 +907,12 @@ label.formCol {
   .middileRow {
     padding: 6px 0 30px;
   }
-
-
 }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
+  .menu li a{font-size: 1.5rem;}
+  .menu li::before{left: -7px;}
+
   .quickLinksWrapper .quickLinks .container {
     gap: 40px;
     padding: 40px;
@@ -925,10 +926,6 @@ label.formCol {
 
 @media (min-width: 768px) and (max-width: 1199.8px) {
 
-  .quickLinks .container {
-    gap: 30px;
-    padding: 30px;
-  }
   .linksItem .itemImage {
     flex: 1;
   }
